# promptshield

./: .gitignore  DEMO.md  README.md
attacks/: README.md  _common.py  attack_01_direct_injection.py  attack_02_indirect_injection.py  attack_03_data_exfiltration.py  attack_04_jailbreak_multiturn.py  attack_05_tool_abuse.py  runner.py
benchmark/: run_benchmark.py
benchmark/results/: report.md
dashboard/: README.md  package-lock.json  package.json  vercel.json
dashboard/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
dashboard/app/analytics/: page.tsx
dashboard/app/incidents/: page.tsx
dashboard/app/live/: page.tsx
dashboard/app/policies/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/components/dashboard/: AttackTypePill.tsx  CommandPalette.tsx  ConnectionIndicator.tsx  IncidentCard.tsx  IncidentDetail.tsx  IncidentSheet.tsx  MetricCard.tsx  PayloadDisplay.tsx  ScoreBar.tsx  SeverityBadge.tsx  Sidebar.tsx  VerdictBadge.tsx  WsProvider.tsx
dashboard/lib/: api.ts  store.ts  types.ts  ws.ts
demo/: checklist.md  script.md  shot_list.md
deployment/: azure-deploy.sh
gateway/: .env.example  Dockerfile  README.md  pyproject.toml  run_migration.py  seed_policy.py
gateway/alembic/: env.py
gateway/alembic/versions/: 0001_initial_schema.py
gateway/app/: config.py  db.py  logging_config.py  main.py  models.py  schemas.py
gateway/app/detectors/: __init__.py  base.py  regex_detector.py  runner.py
gateway/app/policy/: default_policy.yaml  engine.py  loader.py
gateway/app/routers/: dashboard.py  inspect.py  metrics.py  ws.py
gateway/tests/: test_health.py
scripts/: verify_production.py
sdk/: README.md  pyproject.toml
sdk/examples/: langchain_example.py  openai_example.py
sdk/promptshield/: __init__.py  client.py  exceptions.py  models.py  wrappers.py
stitch-design/stitch_promptshield_security_firewall/infrastructure_security_for_ai/: DESIGN.md
stitch-design/stitch_promptshield_security_firewall/promptshield_analytics_dashboard/: code.html
stitch-design/stitch_promptshield_security_firewall/promptshield_incident_details/: code.html
stitch-design/stitch_promptshield_security_firewall/promptshield_incidents_archive/: code.html
stitch-design/stitch_promptshield_security_firewall/promptshield_live_feed/: code.html
stitch-design/stitch_promptshield_security_firewall/promptshield_policies_editor_1/: code.html
stitch-design/stitch_promptshield_security_firewall/promptshield_policies_editor_2/: code.html
stitch-design/stitch_promptshield_security_firewall/promptshield_settings_integrations/: code.html
submissions/: checklist.md
victim-agent/: .env.example  Dockerfile  README.md  pyproject.toml
victim-agent/agent/: core.py  crm.py  main.py  tools.py
victim-agent/agent/static/: demo.html
victim-agent/tests/: test_baselines.py
