[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptshield"
version = "0.1.0"
description = "Python SDK for PromptShield — AI prompt injection & exfiltration detection gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "security", "prompt-injection", "llm-security", "jailbreak"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
langchain = ["langchain>=0.2.0"]
all = ["openai>=1.0.0", "langchain>=0.2.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "openai>=1.0.0",
]

[project.urls]
Repository = "https://github.com/your-org/promptshield"
Documentation = "https://github.com/your-org/promptshield#readme"

[tool.hatch.build.targets.wheel]
packages = ["promptshield"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
