[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "victim-agent"
version = "0.1.0"
description = "Acme Corp AI support bot — PromptShield hackathon demo target"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "openai>=1.30",
    "httpx>=0.27",
    "structlog>=24",
    "aiofiles>=23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
